<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="2"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="45dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:contentDescription="@string/img_dog_image_description"
            app:srcCompat="@drawable/dog_grey"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/text_mainactivity_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/text_mainactivity_subtitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/text_mainactivity_description"
            android:textAlignment="center"
            android:textColorHint="#6D6D6D" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="80dp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape_main"
            android:elevation="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:letterSpacing="0"
            android:onClick="sendToLogin"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/action_login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:translationZ="10dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape_second"
            android:fontFamily="@font/ubuntu_medium"
            android:letterSpacing="0"
            android:onClick="registroUsuario"
            android:text="@string/action_register"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/text_mainactivity_under_description"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>